--- a/templates/diagnosis.html
+++ b/templates/diagnosis.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,47 +12,73 @@
     <script src="{{ url_for('static', filename='js/respond.js') }}"></script>
     <script src="{{ url_for('static', filename='js/modernizr-2.6.2.js') }}"></script>
 </head>
+
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">DiagnoBot</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/">Diagnosis</a></li>
-                <!--<li><a href="/apidoc">API Documentation</a></li>-->
-            </ul>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">DiagnoBot</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Diagnosis</a></li>
+                    <!--<li><a href="/apidoc">API Documentation</a></li>-->
+                </ul>
+            </div>
         </div>
     </div>
-</div>
-<div class="container body-content">
-    <br>
-    <h2>Diagnosis</h2><br>
-    <form class="form-horizontal">
+    <div class="container body-content">
+        <br>
+        <h2>Diagnosis</h2><br>
+        <form class="form-horizontal" id="symptoms">
 
-        <!--symptom checkboxes or sth here-->
+            <!--symptom checkboxes or sth here-->
 
-        <button type="submit" class="btn btn-default">Diagnose</button>
-    </form><br>
-    <script>
-        $(document).ready(function() {
+            <button type="submit" class="btn btn-default">Diagnose</button>
+        </form><br>
+        <script>
+            $(document).ready(function () {
+                // var origin = window.location.origin;
+                // fetch symptoms from the REST API
+                // $.getJSON("/api/v1/symptoms", null, function (data) {
+                //     var items = [];
+                //     $.each(data, function (tuple) {
+                //         items.push("<input type=\"checkbox\" name=\""+ tuple.name + "\" value=\"" + tuple.id + "\">" + tuple.name + "<br>");
+                //         // $.each(tuple, function(item) {
+                //         //     items.push(item);
+                //         // });
+                //     });
+                //     document.write(items);
+                //     // $("#symptoms")
+                // });
+                var httpreq = new XMLHttpRequest();
+                httpreq.open("GET", "/api/v1/symptoms", false);
+                httpreq.send(null);
+                var data = JSON.parse(httpreq.responseText);
+                
+                var items = [];
+                data.forEach(function (tuple) {
+                    items.push("<input type=\"checkbox\" name=\"" + tuple.name + "\" value=\"" + tuple.id +
+                        "\">" + tuple.name + "<br>");
+                });
 
-            // fetch symptoms from the REST API
+                items.forEach(function (item){
+                    $(item).prependTo("#symptoms");
+                });
+                // add action to the diagnose button
 
-            // add action to the diagnose button
-
-        });
-    </script>
-</div>
-<footer class="container">
-    <hr />
-    <p>Copyright &copy; 2018 Adityawarman Fanaro, Andika Wasisto</p>
-</footer>
+            });
+        </script>
+    </div>
+    <footer class="container">
+        <hr />
+        <p>Copyright &copy; 2018 Adityawarman Fanaro, Andika Wasisto</p>
+    </footer>
 </body>
+
 </html>
