Add GitHub link

--- a/templates/diagnosis.html
+++ b/templates/diagnosis.html
@@ -29,6 +29,9 @@
                     <li><a href="/">Diagnosis</a></li>
                     <!--<li><a href="/apidoc">API Documentation</a></li>-->
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="https://github.com/awasisto/diagnobot">Fork me on GitHub</a></li>
+                </ul>
             </div>
         </div>
     </div>
