--- a/templates/diagnosis.html
+++ b/templates/diagnosis.html
@@ -27,7 +27,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="/">Diagnosis</a></li>
-                    <!--<li><a href="/apidoc">API Documentation</a></li>-->
+                    <li><a href="/apidoc">API Documentation</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="https://github.com/awasisto/diagnobot">Fork me on GitHub</a></li>
