Inserted diagnose result in diagnosis.html

--- a/templates/apidoc.html
+++ b/templates/apidoc.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/spectacle.min.css') }}" />
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!-- <script src="javascripts/foundation.js"></script> -->
-    <script src="{{ url_for('static', filename='css/spectacle.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/spectacle.min.js') }}"></script>
 </head>
 <body id="spectacle">
 <div id="page" class="drawer-layout drawer-slide-right-large">
