--- a/templates/diagnosis.html
+++ b/templates/diagnosis.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diagnosis - DiagnoBot</title>
     <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
@@ -14,74 +14,78 @@
 </head>
 
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">DiagnoBot</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="/">Diagnosis</a></li>
-                    <li><a href="/apidoc">API Documentation</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="https://github.com/awasisto/diagnobot">Fork me on GitHub</a></li>
-                </ul>
-            </div>
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">DiagnoBot</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="/">Diagnosis</a></li>
+                <li><a href="/apidoc">API Documentation</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="https://github.com/awasisto/diagnobot">Fork me on GitHub</a></li>
+            </ul>
         </div>
     </div>
-    <div class="container body-content">
+</div>
+<div class="container body-content">
+    <br>
+    <h2>Pilih gejala</h2><br>
+    <form class="form-horizontal" id="diagnosisForm" method="POST">
         <br>
-        <h2>Pilih gejala</h2><br>
-        <form class="form-horizontal" id="diagnosisForm">
-            <br>
-            <button type="submit" class="btn btn-default">Diagnosis</button>
-        </form><br>
-        <script>
-            $(document).ready(function () {
-                // var origin = window.location.origin;
-                // fetch symptoms from the REST API
-                // $.getJSON("/api/v1/symptoms", null, function (data) {
-                //     var items = [];
-                //     $.each(data, function (tuple) {
-                //         items.push("<input type=\"checkbox\" name=\""+ tuple.name + "\" value=\"" + tuple.id + "\">" + tuple.name + "<br>");
-                //         // $.each(tuple, function(item) {
-                //         //     items.push(item);
-                //         // });
-                //     });
-                //     document.write(items);
-                //     // $("#symptoms")
-                // });
-                var httpreq = new XMLHttpRequest();
-                httpreq.open("GET", "/api/v1/symptoms", false);
-                httpreq.send(null);
-                var data = JSON.parse(httpreq.responseText);
-                
-                var items = [];
-                data.forEach(function (tuple) {
-                    items.push("<input type=\"checkbox\" name=\"" + tuple.name + "\" value=\"" + tuple.id +
-                        "\">" + tuple.name + "<br>");
-                });
+        <button type="submit" class="btn btn-default">Diagnosis</button>
+    </form>
+    <br>
+    <script>
+        $(document).ready(function () {
+            var httpreq = new XMLHttpRequest();
+            httpreq.open("GET", "/api/v1/symptoms", false);
+            httpreq.send(null);
+            var data = JSON.parse(httpreq.responseText);
 
-                items.forEach(function (item){
-                    $(item).prependTo("#diagnosisForm");
-                });
-
-                $("#diagnosisForm").submit(function () {
-                    alert("Not yet implemented.");
-                });
+            var items = [];
+            data.forEach(function (tuple) {
+                items.push("<input type=\"checkbox\" name=\"symptom\" value=\"" + tuple.id +
+                    "\">" + tuple.name + "<br>");
             });
-        </script>
+
+            items.forEach(function (item) {
+                $(item).prependTo("#diagnosisForm");
+            });
+
+            $("#diagnosisForm").submit(function () {
+                {#alert("Not yet implemented.");#}
+                {#var selected = $(".symptom:checked");#}
+                {#var symptoms_id = selected.val();#}
+                {#var symptoms_name = selected.name;#}
+                {#console.log(symptoms_id);#}
+                {#console.log(symptoms_name);#}
+            });
+        });
+    </script>
+    <div id="result">
+        {% if results is defined %}
+            <h1>Result:</h1>
+            <h2>You have high chance to have {{ results[0].name }}</h2>
+            <p>With {{ results[0].probability }} probability</p>
+            <h3>Other probabilities:</h3>
+            {% for result in results[1:] %}
+                <p>{{ result.name }} = {{ result.probability }}</p>
+            {% endfor %}
+        {% endif %}
     </div>
-    <footer class="container">
-        <hr />
-        <p>Copyright &copy; 2018 Adityawarman Fanaro, Andika Wasisto</p>
-    </footer>
+</div>
+<footer class="container">
+    <hr/>
+    <p>Copyright &copy; 2018 Adityawarman Fanaro, Andika Wasisto</p>
+</footer>
 </body>
 
 </html>
